# sea

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CPPLINT.cfg  LICENSE  README.md  Session.vim  ]  build.gradle  graphio1.gml  gtest.cmake  sonar-project.properties
benchmark/: cmdoptions.hpp  io.hpp  main.cpp  trackingallocator.hpp
docs/: CONTRIBUTING.md  bcc-iterator.md  c-color_choice-dictionary.md  choice-dictionary.md  cut-vertex-iterator.md  guidelines.md  inplace-bfs.md  iterator.md  n-bit-bfs.md  n-bit-dfs.md  nloglogn-bit-dfs.md  nplusm-bit-dfs.md  outerplanar.md  ragged-dictionary.md  rank-select.md  reverse-dfs.md  subgraph-stack.md  traversator.md
gradle/: setup-googletest.gradle
include/sealib/: _types.h  abstractdoublelinkedlist.h  adjacency.h  basesubgraph.h  basicgraph.h  bcciterator.h  bfs.h  bitarray.h  bitset.h  ccolorcditerator.h  ccolorchoicedictionary.h  cdbitutil.h  choicedictionary.h  choicedictionaryiterator.h  compactarray.h  compactgraph.h  container.h  crosslinkedint.h  crosslinkedsizet.h  cutvertex.h  cutvertexiterator.h  dfs.h  differencelist.h  doublelinkedlist.h  dyckmatchingstructure.h  dyckword.h  dyckwordlexicon.h  dynamicbitsetextension.h  dynarray.h  edgemarker.h  eulertrail.h  graph.h  graphalgorithm.h  graphalgorithms.h  graphcreator.h  graphio.h  graphrepresentations.h  inplaceBFS.h  iterator.h  largedoublelinkedlist.h  (+40 more)
include/sealibvisual/: examples.h  tikzarray.h  tikzdocument.h  tikzdraw.h  tikzedge.h  tikzelement.h  tikzfigure.h  tikzgenerator.h  tikzgraph.h  tikznode.h  tikzpicture.h  tikzstack.h  tikzstyle.h
src/: Graphrepresentations.cpp  adjacency.cpp  asd  basesubgraph.cpp  basesubgraph.h  basicgraph.cpp  bcciterator.cpp  bfs.cpp  bitarray.cpp  bitset.cpp  bytecounter.cpp  ccolorcditerator.cpp  ccolorchoicedictionary.cpp  ccolorchoicedictionarysingle.cpp  cdbitutil.cpp  choicedictionary.cpp  choicedictionaryiterator.cpp  compactarray.cpp  compactgraph.cpp  compactgraph.h  crosslinkedint.cpp  crosslinkedsizet.cpp  cutvertex.cpp  cutvertexiterator.cpp  dfs.cpp  differencelist.cpp  doublelinkedlist.cpp  doublelinkedlist.h  dyckView.cpp  dyckView.h  dyckalgorithms.cpp  dyckmatchingstructure.cpp  dyckword.cpp  dyckwordlexicon.cpp  dynarray.cpp  edgemarker.cpp  eulertrail.cpp  graph.cpp  graphView.cpp  graphView.h  (+59 more)
src-view/: convert.sh  examples.cpp  inplacetest.cpp  launch.sh  main.cpp  plot.sh  plot_helper.gp  test_algorithms.cpp  test_algorithms.h  test_visual.h  tikzarray.cpp  tikzdocument.cpp  tikzdraw.cpp  tikzedge.cpp  tikzelement.cpp  tikzfigure.cpp  tikzgenerator.cpp  tikzgraph.cpp  tikznode.cpp  tikzpicture.cpp  tikzstack.cpp  tikzstyle.cpp
src-view/sealibvisual/: examples.h  tikzarray.h  tikzdocument.h  tikzdraw.h  tikzedge.h  tikzelement.h  tikzfigure.h  tikzgenerator.h  tikzgraph.h  tikznode.h  tikzpicture.h  tikzstack.h  tikzstyle.h
src/algorithms/: dfs.cpp
src/avl/: avltree.cpp  raggeddictionary.cpp
src/bfs/: bfs.cpp  inplaceBFS.cpp  simplebfs.cpp  simplebfs.h
src/choice/: ccolorcditerator.cpp  ccolorchoicedictionary.cpp  cdbitutil.cpp  choicedictionary.cpp  choicedictionaryiterator.cpp
src/collection/: avltree.cpp  bitset.cpp  compactarray.cpp  constanttimearray.cpp  constanttimedynamicarray.cpp  doublelinkedlist.h  initializedarray.cpp  largedoublelinkedlist.cpp  largedoublelinkedlist.h  simplesequence.h  smalldoublelinkedlist.cpp  smalldoublelinkedlist.h  staticspacestorage.cpp  variantbitset.cpp
src/dfs/: dfs.cpp  inplacerunner.h  nplusmbitdfsiterator.h  restoredfsiterator.h  reversedfs.cpp  scciterator.cpp  segmentstack.cpp  segmentstack.h  simplereversedfs.cpp  simplereversedfs.h  skipableiterator.h  standarddfsiterator.h
src/dyck/: dyckmatchingstructure.cpp  dyckmatchingstructure.h  dyckwordlexicon.cpp  dyckwordlexicon.h  localdycktable.cpp  localdycktable.h  naivedyckmatchingstructure.cpp  naivedyckmatchingstructure.h  recursivedyckmatchingstructure.cpp  recursivedyckmatchingstructure.h
src/eulertrail/: dyckmatchingstructure.cpp  dyckwordlexicon.cpp  eulertrail.cpp  localdycktable.h  naiveeulertrail.cpp  naiveeulertrail.h  naivetrailstructure.cpp  naivetrailstructure.h  recursivedyckmatchingstructure.cpp  simpletrail.h  simpletrailstructure.cpp  trailstructure.cpp
src/flow/: inoutgraph.h  separator.cpp  seperator.cpp  stgraph.h  vseperator.cpp
src/graph/: adjacency.cpp  basicgraph.cpp  compactgraph.cpp  directedgraph.cpp  graphcreator.cpp  graphio.cpp  graphrepresentations.cpp  node.cpp  simplevirtualgraph.cpp  simplevirtualgraph.h  undirectedgraph.cpp  virtualgraph.cpp
src/marker/: bcciterator.cpp  cutvertexiterator.cpp  edgemarker.cpp  simplecutvertexiterator.cpp  simplecutvertexiterator.h
src/measurement/: bytecounter.cpp
src/planar/: outerplanarchecker.cpp  simpleouterplanarchecker.cpp  simpleouterplanarchecker.h
src/rankselect/: localranktable.cpp  localranktable.h  localselecttable.cpp  localselecttable.h  rankselect.cpp  rankstructure.cpp  sharedrankselect.cpp  sharedrankselect.h  sharedrankstructure.cpp  sharedrankstructure.h  simplerankselect.cpp  simplerankselect.h
src/subgraph/: basesubgraph.cpp  (+5 more)
test/: avltree_test.cpp  bcciterator_test.cpp  bfs_test.cpp  bitarray_test.cpp  bitset_test.cpp  blockbitset_test.cpp  ccoloerchoicedictionary_test.cpp  ccolorchoicedictionary_test.cpp  choicedictionary_test.cpp  choicedictionaryiterator_test.cpp  compactarray_test.cpp  compactgraph_test.cpp  constanttimearray_test.cpp  cutvertex_test.cpp  dfs_test.cpp  doublelinkedlist_test.cpp  dyckmatchingstructure_test.cpp  graph_test.cpp  graphcreator_test.cpp  graphio_test.cpp  graphrepresentations_test.cpp  hierholzer_simpletrail_test.cpp  hierholzer_trail_test.cpp  iterator_test.cpp  legacy_test.cpp  linkedliststack_test.cpp  matchedint_test.cpp  math_test.cpp  outerplanar_test.cpp  raggeddictionary_test.cpp  rankselect_test.cpp  recursivedyckmatchingstructure_test.cpp  reversedfs_test.cpp  scciterator_test.cpp  segmentstack_test.cpp  separator_test.cpp  seperator_test.cpp  sharedrankselect_test.cpp  simplerankselect_test.cpp  simpletrailstructure_test.cpp  (+8 more)
(+99 files in other folders)
